[metadata]
name = mqtt-helpers
version = 0.0.6
url = 
author = Ondrej Kyjanek
author_email = ondrej.kyjanek@gmail.com
description = Helper classes based on an eclipse paho-mqtt
long_description = file: README.me
license = MIT
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:
include_package_data = True
zip_safe = False
install_requires =
    paho-mqtt >= 1.5.0

[options.packages.find]
where=src


